package service

import (
	"context"
	"sync"

	"github.com/wanglilind/qqq/pkg/config"
	"github.com/wanglilind/qqq/pkg/database"
        "github.com/wanglilind/qqq/api/proto/identity"
)

type IdentityService struct {
	config *config.Config
	db     *database.PostgresDB
	mu     sync.RWMutex
	pb.UnimplementedIdentityServiceServer
}

func NewIdentityService(cfg *config.Config) *IdentityService {
	// 初始化数据库连接
	db, err := database.NewPostgresDB(&database.PostgresConfig{
		Host:     cfg.Database.Host,
		Port:     cfg.Database.Port,
		User:     cfg.Database.User,
		Password: cfg.Database.Password,
		Database: cfg.Database.DBName,
	})
	if err != nil {
		panic(err)
	}

	return &IdentityService{
		config: cfg,
		db:     db,
	}
}

// RegisterIdentity 注册新用户身份
func (s *IdentityService) RegisterIdentity(ctx context.Context, req *pb.RegisterIdentityRequest) (*pb.RegisterIdentityResponse, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	// TODO: 实现身份注册逻辑
	return &pb.RegisterIdentityResponse{
		IdentityId: "test-id",
		Status:    "ACTIVE",
	}, nil
}

// VerifyIdentity 验证用户身份
func (s *IdentityService) VerifyIdentity(ctx context.Context, req *pb.VerifyIdentityRequest) (*pb.VerifyIdentityResponse, error) {
	s.mu.RLock()
	defer s.mu.RUnlock()

	// TODO: 实现身份验证逻辑
	return &pb.VerifyIdentityResponse{
		Valid:      true,
		Message:    "Verification successful",
		VerifyTime: 0, // 当前时间戳
	}, nil
}

// GetIdentityStatus 获取身份状态
func (s *IdentityService) GetIdentityStatus(ctx context.Context, req *pb.GetIdentityStatusRequest) (*pb.GetIdentityStatusResponse, error) {
	s.mu.RLock()
	defer s.mu.RUnlock()

	// TODO: 实现获取身份状态逻辑
	return &pb.GetIdentityStatusResponse{
		Status:        "ACTIVE",
		LastActivity: 0, // 当前时间戳
		IsActive:     true,
	}, nil
}

// UpdateBiometricData 更新生物特征数据
func (s *IdentityService) UpdateBiometricData(ctx context.Context, req *pb.UpdateBiometricDataRequest) (*pb.UpdateBiometricDataResponse, error) {
	s.mu.Lock()
	defer s.mu.Unlock()

	// TODO: 实现更新生物特征数据逻辑
	return &pb.UpdateBiometricDataResponse{
		Success:    true,
		Message:    "Update successful",
		UpdateTime: 0, // 当前时间戳
	}, nil
}
